option('use_vistaio', type: 'feature', value: 'enabled', description: 'Compile with the vistaio library')
option('use_ffmpeg', type: 'feature', value: 'enabled', description: 'Compile with ffmpeg (libavcodec) mpeg encoding support')
option('use_dcmtk', type: 'feature', value: 'enabled', description: 'Compile with DCMTK support for DICOM files')
option('use_mdc', type: 'feature', value: 'enabled', description: 'Compile with the xmedcon/libmdc library')
option('use_volpack', type: 'feature', value: 'enabled', description: 'Compile with libvolpack rendering support')
option('use_gsl', type: 'feature', value: 'enabled', description: 'Compile with the GNU Scientific Library')
option('use_jpeg2000', type: 'feature', value: 'enabled', description: 'Compile with jpeg2000 support')
option('use_gconf', type: 'feature', value: 'enabled', description: 'Compile with gconf support')
option('use_gnome_vfs', type: 'feature', value: 'disabled', description: 'Compile with gnome-vfs support')
option('generate_docs', type: 'feature', value: 'enabled', description: 'Generate docs')